--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "notes",
   "version": "1.0.0",
-  "description": "",
+  "description": "# LAB - Class 01",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,10 @@
     "minimist": "^1.2.5"
   },
   "devDependencies": {
-    "eslint": "^7.0.0"
+    "eslint": "^7.0.0",
+    "jest": "^26.0.1"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
